# set-python-final-project

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/: audio_transcriber.py  youtube_downloader.py
utils/: utils.py
